src/components/menus/BottomMenu.module.scss
@import '../../base/module';

.footer {
  background: $color-lightorange;
  padding-top: 40px;
  padding-bottom: 40px;
  color: $color-greymd;
  font-family: $font-secondary;
  letter-spacing: 0.1rem;
  width: 100%;

  @media (min-width: $desktop) {
  }
}

.container-footer {
  display: flex;
  justify-content: space-between;
}

.leftCol,
.middleCol,
.rightCol {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 33%;
}

.friendsText,
.emailText {
  color: $color-black;
  text-transform: uppercase;
  font-size: 0.9rem;
}
.inboxText,
.helloText {
  color: $color-black;
  font-family: $font-header;
  font-style: italic;
  font-size: 1.5rem;
}

.MenuLinks {
  text-align: center;

  ul {
    column-count: 2;
    li {
      padding-bottom: 10px;
    }
  }

  a {
    color: $color-greymd;
    font-size: 0.78em;
  }

  @media (min-width: $tablet) {
    flex: 1 1 100px;

    ul {
      column-count: 1;
    }
  }

  @media (min-width: $desktop) {
    text-align: left;
  }
}

.MenuLinkTitle {
  font-family: $font-header;
  color: $color-black;
  padding-bottom: 20px;
  padding-top: 20px;
  font-size: 24px;
  font-style: italic;
  font-weight: 400;
}

.ContactColumn {
  .info {
    p {
      font-size: 0.78em;
      line-height: 1.2rem;
    }
  }
}

.SocialColumn {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  max-width: width(12);
  text-transform: uppercase;

  @media (min-width: $desktop) {
    max-width: width(2.5);
    order: 3;
    padding-left: 30px;
  }

  .SocialGroup {
    text-align: center;
    .SocialLinks {
      display: flex;
      align-items: center;
      justify-content: center;

      .SocialLink {
        padding-left: 10px;
        padding-right: 10px;
      }
    }
  }
}

.subscribe {
  text-align: center;
  padding-top: 30px;
  padding-bottom: 30px;
}

.bottomBar {
  margin-top: 40px;
  color: $color-black;
  display: flex;
  justify-content: space-between;
  p {
    font-size: 0.78em;
  }
}

.bottomContainer {
  color: $color-black;
  display: flex;
  justify-content: space-between;
}

